frame/support/test/tests/construct_runtime_ui/invalid_module_entry.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		System: system::{Pallet},
		Balance: balances::{Unexpected},
	}
}

fn main() {}
